--- a/Content/style.css
+++ b/Content/style.css
@@ -112,6 +112,7 @@ header ul li a
     margin: 0 15px;
     color: #FFF;
     text-decoration: none;
+    transition: 0.5s;
 }
 header ul li a:hover
 {
@@ -119,7 +120,6 @@ header ul li a:hover
     transition: 0.2s ease-in-out;
     transform:scale(1.1);
     letter-spacing: 2px;
-
 }
 header.sticky ul li a
 {
