--- a/Content/style.css
+++ b/Content/style.css
@@ -26,7 +26,7 @@ section
     background: canvas;
     background-size: cover;
     background-position: right;
-    display: flex;
+    display: inline-block;
     justify-content: space-between;
     align-items: center;
 }
