--- a/Content/style.css
+++ b/Content/style.css
@@ -7,14 +7,6 @@
     font-family: 'Poppins', sans-serif;
     scroll-behavior: smooth;
 }
-canvas 
-{
-    display: block;
-    background: none;
-    position:absolute;
-    top:0;  
-    left:0;
-}
 section
 {
     padding: 100px;
@@ -23,7 +15,7 @@ section
 {
     position: relative;
     min-height: 100vh;
-    background: canvas;
+    background: #222;
     background-size: cover;
     background-position: right;
     display: inline-block;
