--- a/Content/style.css
+++ b/Content/style.css
@@ -18,7 +18,7 @@ section
     background: #222;
     background-size: cover;
     background-position: right;
-    display: inline-block;
+    display: flex;
     justify-content: space-between;
     align-items: center;
 }
