--- a/Content/style.css
+++ b/Content/style.css
@@ -15,7 +15,7 @@ section
 {
     position: relative;
     min-height: 100vh;
-    background: #1F1B24;
+    background: #111;
     background-size: cover;
     background-position: right;
     display: flex;
