--- a/Content/style.css
+++ b/Content/style.css
@@ -230,6 +230,13 @@ img
     max-width: 100%;
     filter: invert(1);
 }
+.languages .content .languages a img:hover
+{
+    filter: none;
+    background: #FFF;
+    transition: 0.2s ease-in-out;
+    transform:scale(1.1);
+}
 .contact
 {
     background: #111;
