--- a/Content/style.css
+++ b/Content/style.css
@@ -374,6 +374,85 @@ img
     padding: 10px;
 }
 
+/*Browser Windows*/
+.container {
+  border: 3px solid #f1f1f1;
+  border-radius: 15px;
+}
+
+/* Container for columns and the top "toolbar" */
+.row {
+  padding: 10px;
+  background: #f1f1f1;
+  border-top-left-radius: 13px;
+  border-top-right-radius: 13px;
+}
+
+/* Create three unequal columns that floats next to each other */
+.column {
+  float: left;
+}
+
+.left {
+  width: 15%;
+}
+
+.right {
+  width: 10%;
+}
+
+.middle {
+  width: 75%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Three dots */
+.dot {
+  margin-top: 4px;
+  height: 12px;
+  width: 12px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+/* Style the input field */
+input[type=text] {
+  width: 100%;
+  border-radius: 5px;
+  border: none;
+  background-color: white;
+  margin-top: -8px;
+  height: 25px;
+  color: #666;
+  padding: 5px;
+}
+
+/* Three bars (hamburger menu) */
+.bar {
+  width: 17px;
+  height: 3px;
+  background-color: #aaa;
+  margin: 3px 0;
+  display: block;
+}
+
+/* Page content */
+.github .content .contactBx .w50 .container .content 
+{
+  padding: 100px;
+}
+.github .content .contactBx .w50 .container .content a img:hover
+{
+    transition: 0.2s ease-in-out;
+    transform: scale(1.1);
+}
 /*Responsive*/
 @media (max-width: 991px) 
 {
@@ -412,7 +491,7 @@ img
     {
         width: 40px;
         height: 40px;
-        background: url(Icon/menu.svg);
+        background: url('/Icon/menu.svg');
         background-position: center;
         background-repeat: no-repeat;
         background-size: 30px;
@@ -422,7 +501,7 @@ img
     {
         width: 40px;
         height: 40px;
-        background: url('Icon/close.svg');
+        background: url('/Icon/close.svg');
         background-position: center;
         background-repeat: no-repeat;
         background-size: 25px;
