Added some fix code

--- a/Content/style.css
+++ b/Content/style.css
@@ -15,7 +15,8 @@ section
 {
     position: relative;
     min-height: 100vh;
-    background: #111;
+    /*background: #111;*/
+    background: url('Image/matrix.gif');
     background-size: cover;
     background-position: right;
     display: flex;
