--- a/Content/style.css
+++ b/Content/style.css
@@ -463,6 +463,8 @@ input[type=text] {
 .github .content
 {
     align-items: center;
+    display: flex;
+    justify-content: center;
 }
 /* Page content */
 
